--- a/windows/build_scripts/config_64bit.json
+++ b/windows/build_scripts/config_64bit.json
@@ -4,6 +4,7 @@
   "CMAKE_GENERATOR_NAME": "NMake Makefiles",
   "WIN_INSTALLER_CREATOR": "win_cc3d_installer_creator.py",
   "WIN_INSTALLER_TEMPLATE": "CompuCell3D-64bit.nsi.tpl",
+  "BUILD_ARCH_TAG":"64bit",
   "PYQT_VERSION": "5",
   "WIN_DEPENDENCIES_ROOT": "d:/prerequisites_2017/64bit",
   "PYTHON_DIR": "d:/prerequisites_2017/64bit/Python27",
