--- a/mac/build_scripts/config_64bit.json
+++ b/mac/build_scripts/config_64bit.json
@@ -8,10 +8,10 @@
   "CMAKE_C_FLAGS":"-mmacosx-version-min=10.6 -O3 -g -fpermissive -m64",
   "CMAKE_CXX_COMPILER":"/usr/local/Cellar/gcc48/4.8.2/bin/g++",
   "CMAKE_CXX_FLAGS":"-mmacosx-version-min=10.6 -O3 -g -fpermissive -m64",
-  "PREREQUISITES_DIR": "/Users/m/prerequisites/cc3d_2017",
-  "PYTHON_EXECUTABLE": "/Users/m/prerequisites/cc3d_2017/python27/bin/python2.7",
-  "PYTHON_INCLUDE_DIR": "/Users/m/prerequisites/cc3d_2017/python27/include/python2.7",
-  "PYTHON_LIBRARY": "/Users/m/prerequisites/cc3d_2017/python27/lib/libpython2.7.dylib",
-  "VTK_DIR": "/Users/m/prerequisites/cc3d_2017/vtk/lib/cmake/vtk-6.3",
+  "PREREQUISITES_DIR": "/Users/m/prerequisites/3.7.8",
+  "PYTHON_EXECUTABLE": "/Users/m/prerequisites/3.7.8/python27/bin/python2.7",
+  "PYTHON_INCLUDE_DIR": "/Users/m/prerequisites/3.7.8/python27/include/python2.7",
+  "PYTHON_LIBRARY": "/Users/m/prerequisites/3.7.8/python27/lib/libpython2.7.dylib",
+  "VTK_DIR": "/Users/m/prerequisites/3.7.8/vtk/lib/cmake/vtk-6.3",
   "RR_INSTALL_PATH":"/Users/Shared/roadrunner-1.5//site-packages/roadrunner"
 }
