--- a/windows/build_scripts/config_32bit.json
+++ b/windows/build_scripts/config_32bit.json
@@ -1,6 +1,6 @@
 {
   "NSIS_EXE_PATH": "C:/Program Files (x86)/NSIS/makensis.exe",
-  "CMAKE_PATH": "C:/Program Files (x86)/CMake/bin/cmake.exe",
+  "CMAKE_PATH": "C:/Program Files/CMake/bin/cmake.exe",
   "CMAKE_GENERATOR_NAME": "NMake Makefiles",
   "WIN_INSTALLER_CREATOR": "win_cc3d_installer_creator.py",
   "WIN_INSTALLER_TEMPLATE": "CompuCell3D-32bit.nsi.tpl",
